Correção de links e imagens, adição do analytics, e melhoria do SEO.

--- a/pages/bh-7-dicas-para-economizar-no-carnaval.html
+++ b/pages/bh-7-dicas-para-economizar-no-carnaval.html
@@ -56,15 +56,15 @@
      <!-- Corpo do site -->
      <div id="main">
       <!-- Banner do site-->
-      <div id="banner">
+      <div id="banner" class="banner-3">
         <div class="container"></div>
           <div class="row">
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8 align-self-end">
-              <h2 style="padding-left: 14px;"><b>
-                7 Dicas para economizar no Carnaval de rua em Belo Horizonte</b></h2>
+                  <h1><b>7 Dicas para economizar no Carnaval de rua em Belo Horizonte</b></h1>
+                  <h2>BH tem um dos maiores carnavais do país. Saiba como aproveitá-lo sem gastar muito</h2>
               </div>
             </div>
           </div>
@@ -82,33 +82,33 @@
                 <div class="col-lg-8">
                   <div id="sobre-txt">
                     <p>Finalmente a melhor época do ano está se aproximando! É tempo de deixar os problemas de lado e curtir a energia contagiante do Carnava! Em Belo Horizonte, o Carnaval de rua cresce cada vez mais e hoje já pode ser considerado como um dos maiores do Brasil! Nesse ano de 2020, a expectativa é de que 5 milhões de foliões curtirão a maior festa popular do país!</p>
-                    <p>E você, já escolheu os bloquinhos para aproveitar o carnaval de rua em BH? O seu bolso também está preparado para a folia? No ano de 2018, o aplicativo Guiabolso (https://www.guiabolso.com.br/) realizou uma pesquisa que apontou os principais gastos dos foliões no Carnaval daquele ano. O maior gasto foi com comidas (62,3%), seguido por bebidas (50,8%), transportes (28,7%), hospedagens (24,6%), fantasias (9%) e lojas de conveniência (6,6%).</p>
+                    <p>E você, já escolheu os bloquinhos para aproveitar o carnaval de rua em BH? O seu bolso também está preparado para a folia? No ano de 2018, o aplicativo <a href="https://www.guiabolso.com.br/" target="_blank">Guiabolso</a> realizou uma pesquisa que apontou os principais gastos dos foliões no Carnaval daquele ano. O maior gasto foi com comidas (62,3%), seguido por bebidas (50,8%), transportes (28,7%), hospedagens (24,6%), fantasias (9%) e lojas de conveniência (6,6%).</p>
                     <p>Se o seu orçamento não está dos melhores nesse ano, não se preocupe! Dá pra curtir muito e economizar ao mesmo tempo com essas 7 dicas incríveis de como economizar no carnaval de rua que a gente separou para você!</p>
                     <br><hr>
                     <h5>#Dica 1 - Planejamento é TUDO! ;)</h5>
                     <br>
-                    <img src="../assets/Post3_imagem1.jpg" title="Foto: Bich Tran / Pexels" style="width: 100%; height: auto;">
+                    <img src="../assets/Post3_imagem1.jpg" title="Se planeje bem para esse Carnaval! Foto: Bich Tran / Pexels" style="width: 100%; height: auto;">
                     <br><br>
                     <p>Essa é a dica mais importante de todas. Afinal de contas, planejar os gastos previamente é a chave principal para um bom controle do orçamento. Sugerimos que você primeiramente estipule o valor que está disposto(a) a gastar durante todo o período do Carnaval e depois divida-o entre os dias que você vai curtir a folia, seguido das suas prioridades de gastos (comidas, bebidas, festas pagas, transporte, etc).</p>
                     <p>Existem diversas ferramentas que podem ajudar no seu planejamento! Com uma rápida pesquisa, você encontrará um universo de aplicativos de organização financeira disponíveis para te auxiliar, além dos planners físicos, para você que funciona melhor fazendo as contas na ponta do lápis. Vamos sugerir alguns aplicativos que podem te ajudar nessa tarefa, mas fique livre para escolher o que você mais se identificar!</p>
-                    <p>Indicamos o <a href="https://www.mobills.com.br/">Mobills</a>, que é uma plataforma bem completa em que você consegue gerenciar suas despesas pela geolocalização, além de conseguir sincronizar os dados da nuvem e muito mais! Outra opção interessante é o <a href="https://www.spendee.com/">Spendee</a>, recomendado para quem gosta de um design mais simples e minimalista! Para finalizar, sugerimos também o app <a href="https://www.expense-iq.com/home">Expense IQ</a>, que permite a geração de relatórios técnicos com os gastos e orçamentos feitos, disponível na plataforma Android.</p>
+                    <p>Indicamos o <a href="https://www.mobills.com.br/" target="_blank">Mobills</a>, que é uma plataforma bem completa em que você consegue gerenciar suas despesas pela geolocalização, além de conseguir sincronizar os dados da nuvem e muito mais! Outra opção interessante é o <a href="https://www.spendee.com/" target="_blank">Spendee</a>, recomendado para quem gosta de um design mais simples e minimalista! Para finalizar, sugerimos também o app <a href="https://www.expense-iq.com/home" target="_blank">Expense IQ</a>, que permite a geração de relatórios técnicos com os gastos e orçamentos feitos, disponível na plataforma Android.</p>
                     <br><hr>
-                    <h5>#Dica 2 - </h5>
+                    <h5>#Dica 2 - Compre as bebidas antes!</h5>
                     <br>
-                    <img src="../assets/Post3_imagem2.jpeg" title="Foto: Dani Salgado" style="width: 100%; height: auto;">
+                    <img src="../assets/Post3_imagem2.jpeg" title="Comprando bebidas. Foto: Dani Salgado" style="width: 100%; height: auto;">
                     <br><br>
                     <p>Sabemos que no Carnaval de rua em BH o que não faltam são ambulantes espalhados pelos bloquinhos vendendo diversas opções de bebidas, certo? Porém, é claro que o conforto de poder comprar sua bebida onde estiver eleva bastante o custo da bebida. Então, a dica que damos para você economizar nesse Carnaval é comprar suas bebidas em algum supermercado antes de ir para os bloquinhos e, se você estiver com a galera, para mantê-las geladinhas uma caixa de isopor seria bem útil!</p>
                     <p>Você quer saber quais são os grandes supermercados que estarão próximos aos principais blocos de rua em BH? Então baixe o nosso <a href="ebook.html">e-book</a> que conta com essa e mais outras dicas imperdíveis para que você prepare o seu bolso para o Carnaval!</p>
                     <br><hr>
                     <h5>#Dica 3 - Comer antes do rolê!</h5>
                     <br>
-                    <img src="../assets/Post3_imagem3.jpg" title="Foto: Lum3n.com / Pexels" style="width: 100%; height: auto;">
+                    <img src="../assets/Post3_imagem3.jpg" title="Tome café da manhã antes do Carnaval. Foto: Lum3n.com / Pexels" style="width: 100%; height: auto;">
                     <br><br>
                     <p>Muitas vezes saímos de casa de barriga vazia para os bloquinhos e acabamos deixando para comer nos lugares que vamos (tem que comer bem pra não dar PT, não é mesmo?!), o que torna isso um gasto a mais em nosso orçamento. Então, lembre-se de fazer uma refeição reforçada antes de ir para os blocos de rua, e caso você seja daquelas pessoas que gostam de curtir a folia durante o dia inteiro, é válido carregar pequenos snacks na bolsa, para que seja gasto o mínimo possível com comida na rua!</p>
                     <br><hr>
                     <h5>#Dica 4 - E por que não beber antes do rolê também?</h5>
                     <br>
-                    <img src="../assets/Post3_imagem4.jpg" title="Foto: Burst / Pexels" style="width: 100%; height: auto;">
+                    <img src="../assets/post3_imagem4.jpg" title="Faça um esquenta com os amigos. Foto: Burst / Pexels" style="width: 100%; height: auto;">
                     <br><br>
                     <p>Como já falamos na #Dica2, as bebidas vendidas dentro dos bloquinhos são bem mais caras do que quando compramos antes. E, se as bebidas forem compradas em promoções nos supermercados antes mesmo do Carnaval, tudo fica ainda bem mais barato! Que tal juntar a galera, fazer um planejamento, comprar as bebidas antes e fazer um pré em casa mesmo? Quem sabe não rola até um churrasquinho, aí já dá pra fazer a #Dica3 também! Depois é só partir para os bloquinhos naquele grau e curtir a festa!</p>
                     <br><hr>
@@ -175,7 +175,7 @@
                   Vale a pena ter uma conta digital?
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 18/01/2020</p>
-                <a href="../pages/post1.html">
+                <a href="../pages/vale-a-pena-conta-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -189,7 +189,7 @@
                   10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
-                <a href="../pages/post2.html">
+                <a href="../pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -200,13 +200,13 @@
         <div class="row linha-postagem ">
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
+              <img src="../assets/post3.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Empreendedorismo Digital
+                  7 Dicas para economizar no Carnaval de rua em Belo Horizonte
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
-                <a href="../pages/post4.html">
+                <p id="subtitulo-atalho">Educação Financeira • 20/01/2020</p>
+                <a href="../pages/bh-7-dicas-para-economizar-no-carnaval.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -214,13 +214,13 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post5.png" class="thumb-blog" alt="thumb">
+              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Pule carnaval ganhando dinheiro
+                  Como empreender no mundo digital?
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 22/01/2020</p>
-                <a href="../pages/post5.html">
+                <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
+                <a href="../pages/como-empreender-no-mundo-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -231,10 +231,10 @@
               <img src="../assets/post6.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Como ganhar dinheiro vendendo suas roupas em brechós virtuais 
+                  Entenda como ganhar dinheiro com brechós virtuais! 
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 23/01/2020</p>
-                <a href="../pages/post6.html">
+                <a href="../pages/entenda-como-ganhar-dinheiro-brecho-virtual.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -267,5 +267,14 @@
         </div>
       </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156928875-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156928875-1');
+    </script>
   </body>
 </html>
