--- a/pages/entenda-como-ganhar-dinheiro-brecho-virtual.html
+++ b/pages/entenda-como-ganhar-dinheiro-brecho-virtual.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
+    <meta name="description" content="O carnaval tá chegando e o dinheiro tá curto? Clique aqui e entenda como mudar isso.">
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/post.css" />
@@ -56,15 +57,15 @@
      <!-- Corpo do site -->
      <div id="main">
       <!-- Banner do site-->
-      <div id="banner">
+      <div id="banner" class="banner-6">
         <div class="container"></div>
           <div class="row">
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8 align-self-end">
-              <h2 style="padding-left: 14px;"><b>
-                Como ganhar dinheiro vendendo suas roupas em brechós virtuais </b></h2>
+                  <h1><b>Como ganhar dinheiro vendendo suas roupas em brechós virtuais</b></h1>
+                  <h2>Vender fantasias de Carnaval pode ser uma boa maneira de fazer uma renda extra no início do ano. </h2>
               </div>
             </div>
           </div>
@@ -84,9 +85,9 @@
                   <div id="sobre-txt">
                     <p>Hoje temos guarda-roupa abarrotados de roupas e muitas vezes usamos as mesmas, temos aquelas nossas peças queridinhas que em qualquer viagem elas já estão na mala. Todo início do ano, faço um pente-fino no armário e verifico quais são as peças que têm 1 ano que não uso e realmente pratico o desapego total!!! </p>
                     <br>
-                    <img src="../assets/Post6_imagem1.jpg" style="width: 100%; height: auto;">
+                    <img src="../assets/post6.jpg" alt="Desapegue das roupas que você não usa mais!" style="width: 100%; height: auto;">
                     <br><br>
-                    <p>É uma excelente oportunidade, que você faz uma grana extra e a pessoa que gostou leva a roupa com um ótimo preço! Esse tipo de negócio é o famoso “ganha-ganha”. Há vários e-commerces que promovem os brechós virtuais como o Enjoei, Brechó online, Reciclaluxo, O Bem Amado, Retroagir, Pretty New, O Garimpo Brechó, Brechó Light In the Box, Peguei bode, Repassa. </p>
+                    <p>É uma excelente oportunidade, que você faz uma grana extra e a pessoa que gostou leva a roupa com um ótimo preço! Esse tipo de negócio é o famoso “ganha-ganha”. Há vários e-commerces que promovem os brechós virtuais como o <a href="https://www.enjoei.com.br" target="_blank">Enjoei</a>, Brechó online, Reciclaluxo, O Bem Amado, Retroagir, Pretty New, O Garimpo Brechó, Brechó Light In the Box, Peguei bode, Repassa. </p>
                     <p>Então, bora aumentar a renda?!  </p>
                   </div>
                 </div>
@@ -128,7 +129,7 @@
                   Vale a pena ter uma conta digital?
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 18/01/2020</p>
-                <a href="../pages/post1.html">
+                <a href="../pages/vale-a-pena-conta-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -142,7 +143,7 @@
                   10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
-                <a href="../pages/post2.html">
+                <a href="../pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -159,7 +160,7 @@
                   7 Dicas para economizar no Carnaval de rua em Belo Horizonte
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 20/01/2020</p>
-                <a href="../pages/post3.html">
+                <a href="../pages/bh-7-dicas-para-economizar-no-carnaval.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -167,13 +168,13 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post5.png" class="thumb-blog" alt="thumb">
+              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Pule carnaval ganhando dinheiro
+                  Como empreender no mundo digital?
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
-                <a href="../pages/post5.html">
+                <a href="../pages/como-empreender-no-mundo-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -184,10 +185,10 @@
               <img src="../assets/post6.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Como ganhar dinheiro vendendo suas roupas em brechós virtuais 
+                  Entenda como ganhar dinheiro com brechós virtuais! 
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 22/01/2020</p>
-                <a href="../pages/post6.html">
+                <p id="subtitulo-atalho">Educação Financeira • 23/01/2020</p>
+                <a href="../pages/entenda-como-ganhar-dinheiro-brecho-virtual.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -220,5 +221,14 @@
         </div>
       </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156928875-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156928875-1');
+    </script>    
   </body>
 </html>
