--- a/pages/saiba-como-pular-carnaval-ganhando-dinheiro.html
+++ b/pages/saiba-como-pular-carnaval-ganhando-dinheiro.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
+    <meta name="description" content="O carnaval tá chegando e o dinheiro tá curto? Clique aqui e entenda como ganhar dinheiro.">
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/post.css" />
@@ -56,15 +57,14 @@
      <!-- Corpo do site -->
      <div id="main">
       <!-- Banner do site-->
-      <div id="banner">
-        <div class="container"></div>
+      <div id="banner" class="banner-5">
           <div class="row">
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8 align-self-end">
-              <h2 style="padding-left: 14px;"><b>
-                Vale a pena ter uma conta digital?</b></h2>
+                  <h1><b>Saiba como pular carnaval ganhando dinheiro!</b></h1>
+                  <h2>Já pensou em curtir o carnaval enquanto economiza dinheiro? Te ensinamos aqui!</h2>
               </div>
             </div>
           </div>
@@ -76,52 +76,51 @@
       <div id="corpo-post">
         <div id="container">
           <div id="row">
+            <div class="col-lg-1"></div>
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8">
                   <div id="sobre-txt">
-                    <p>Se você veio parar aqui, muito provavelmente está pensando em encerrar sua conta em um banco tradicional e abrir uma conta em um banco digital, ou então acabou de migrar para um banco digital, mas ainda não sabe se fez a coisa certa. Acertei?</p>
-                    <img src="../assets/post1.png" title="Foto: Bruce Mars / Pexels" style="width: 100%; height: auto;">
-                    <br><br><hr>
-                    <h5>Mas afinal, o que é uma conta digital?</h5>
-                    <br>
-                    <p>Uma conta digital é muito parecida com uma conta tradicional. Só que tudo que acontece dentro de uma agência bancária, foi parar em um aplicativo de celular. Você acompanha sua fatura, faz transferências, paga e gera boletos pelo celular ou pelo computador, sem precisar sair de casa ou enfrentar filas. Até o atendimento é feito eletronicamente!</p>
+                    <p>O carnaval é uma época do ano que movimenta muito dinheiro. Muitas pessoas viajam, saem para bares, festas e bloquinhos, investem em fantasias, maquiagens e roupas diferentes.</p>
+                    <p>O que ninguém te conta é que, além de curtir e gastar muita grana, você pode ganhar dinheiro, tanto no carnaval - que começará oficialmente dia 21 de fevereiro, quanto no pré-carnaval - que já começou! Então corre aqui que vamos te ensinar a chegar no final de fevereiro No Controle da sua vida financeira.</p>
                     <br><hr>
-                    <h5>Pontos negativos (mas nem tanto) de ter uma conta digital:</h5>
+                    <h5>Faça fantasias e acessórios carnavalescos da moda</h5>
                     <br>
-                    <p>Os bancos digitais não tem agência. Eu considero isto um ponto positivo, mas algumas pessoas sentem falta do contato direto com o seu gerente.Em caso de dúvida ou problema você deve entrar em contato com seu banco digital pelo chat no app ou no site, ou por telefone - e dependendo do problema, estas conversas poderão ser muito longas.</p>
-                    <p>Você também dependerá da disponibilidade de caixas 24h em sua cidade ou precisará ir em casas lotéricas em horário comercial se quiser sacar seu dinheiro. As taxas de saque também costumam ser altas.</p>
+                    <img src="../assets/Post 5 - imagem 1 (Capa).PNG" title="Fantasias feitas em casa. Foto: Pinterest" style="width: 100%; height: auto;">
+                    <br><br>
+                    <p>Você pode começar, se inspirando <a href="post2.html">nesse post</a> no nosso blog em que ensinamos a fazer fantasias e acessórios simples, criativos e baratos. Também é legal pesquisar referências de fantasias no Pinterest. Procurando por termos como “carnaval 2020”, “carnaval 2020 ideias” e “carnaval 2020 fantasias”, você encontrará muito conteúdo atual, brilhoso e colorido para suas futuras clientes arrasarem nos bloquinhos.</p>
+                    <p>Dê uma olhada boa e pense o que suas habilidades manuais te permitem fazer. Abuse de glitter, lantejoula, EVA, brocal, neon, tule que será sucesso! Se você não sabe costurar, usar cola para tecido pode te ajudar muito na hora de criar as fantasias. Os materiais para confeccionar fantasias e acessórios costumam ser baratinhos, você poderá conseguir um lucro muito bom em suas vendas.</p>
+                    <p>Para vender, faça um Instagram e poste fotos das peças. As negociações poderão ser feitas por direct mesmo. Divulgue o Instagram para suas amigas, no grupo da família e onde puder, para alcançar mais gente! </p>
                     <br><hr>
-                    <h5>Então, o que tem de bom nesse tal de banco digital?</h5>
+                    <h5>Transporte os foliões</h5>
                     <br>
-                    <p>Os bancos digitais não têm que gastar com a manutenção de uma rede de agências, segurança, aluguel, dentre outras coisas. Com isso, eles conseguem repassar essa economia para seus clientes, trabalhando com tarifas baixíssimas ou sem tarifas.</p>
-                    <p>Lembra quando você abriu sua primeira conta no banco? O tempo que teve que aguardar na fila, aquela papelada que precisou ler e assinar, fora as vezes que precisou voltar na agência? Você não perde mais esse tempo ao abrir uma conta digital! Tudo é feito pelo aplicativo no celular, por lá você envia fotos dos seus documentos, uma foto sua para comprovar que é você e aceita os termos do banco por ali mesmo, sem pegar trânsito nem nada. Só precisa se preocupar em sair bonito na selfie!</p>
-                    <p>Pagar um boleto, transferir dinheiro para o seu filho que está viajando, checar a fatura do cartão, fazer um depósito e até pegar um empréstimo. Você consegue fazer tudo isso sem sair do sofá. E se não for horário comercial ou dia útil, você pode agendar uma transferência para o próximo dia útil.</p>
-                    <p>Muitos bancos digitais têm seus programas de pontos e de cashback, fazendo seu dinheiro crescer ainda mais. Você também consegue ajustar o limite do cartão pelo aplicativo. Além disso, com a fatura na palma da mão você consegue organizar muito melhor os seus gastos.</p>
-                    <p>É legal lembrar que transferindo dinheiro de uma conta de um banco digital para outra do mesmo banco, você não paga nenhuma taxa e o dinheiro cai na mesma hora, mesmo não sendo dia útil, nem horário comercial.</p>
+                    <img src="../assets/Post 5 - imagem 2.PNG" title="Transporte. Foto: Peter Fazekas / Pexels" style="width: 100%; height: auto;">
+                    <br><br>
+                    <p>Você pode aproveitar que nessa época de festas, muitas pessoas deixam o carro em casa para poder beber! Cadastre-se em aplicativos como <a href="https://www.uber.com" target="_blank">Uber</a>  e <a href="https://99app.com/" target="_blank">99</a> e tranporte os foliões pela cidade.</p>
+                    <p>Você pode também começar um dia antes, fazendo transfer de turistas que chegarão no aeroporto ou na rodoviária.</p>
+                    <p>Quer saber onde serão os principais bloquinhos para que você não perca nenhuma corrida? Então baixe já o nosso e-book exclusivo com tudo que você precisa saber sobre o carnaval de rua de BH de 2020!</p>
                     <br><hr>
-                    <h5>Mas é seguro?</h5>
+                    <h5>Venda lanchinhos vegetarianos, veganos, sem glúten ou sem lactose</h5>
                     <br>
-                    <p>O Conselho Monetário Nacional obriga, na resolução 4658 estas instituições financeiras a terem uma política de segurança cibernética, definindo requisitos para a contratação de serviços de processamento e armazenamento de dados e de computação em nuvem.</p>
-                    <p>Além disso, a segurança de uma conta digital é basicamente a mesma das contas tradicionais. Ambas seguem a regulamentação do Banco central. Para se proteger de ataques cibernéticos, as empresas estão investindo em sistemas cada vez mais seguros.</p>
-                    <p>Então, pode ficar tranquilo, mas lembre-se sempre de proteger seus dados bancários, como faria com os dados da sua conta convencional.</p>
+                    <img src="../assets/Post 5 - imagem 3.PNG" title="Leve lanches! Foto: Tania Dimas / Pixabay" style="width: 100%; height: auto;">
+                    <br><br>
+                    <p>Durante o carnaval, é comum sentir fome no meio da rua, e é nessas horas que quem tem alguma restrição alimentar sofre. Que tal apostar na falta de oferta de lanches vegetarianos, veganos, sem lactose ou sem glúten e na crescente demanda deste público, para ganhar dinheiro?</p>
                     <br><hr>
-                    <h5>Acho que isso é tecnológico demais pra mim…</h5>
+                    <h5>Alugue um cômodo da sua casa</h5>
                     <br>
-                    <p>Se você não está acostumado a lidar com aplicativos, realmente pode ter um pouco de dificuldade em seus primeiros contatos com um banco digital. Mas não é nenhum bicho de sete cabeças! Os bancos digitais focam muito em experiência do cliente e em usabilidade, suas interfaces são muito intuitivas.</p>
-                    <p>Mas se mesmo assim achou difícil, peça alguém para te ajudar nesse começo, na hora de abrir a conta e te mostrar um pouco das funcionalidades. Garanto que rapidinho você estará contando para todo mundo que não entendo como ainda não tinha tomado a decisão de abrir uma conta digital antes!</p>
-                    <br><hr>
-                    <h5>Como saber qual é a melhor conta digital para mim?</h5>
-                    <br>
-                    <p>Cada banco digital tem suas particularidades, e você deve entender qual é o mais adequado para o seu perfil.</p>
-                    <p>Para decidir o meu, usei o Simulador de Contas Digitais e deu super certo. O banco digital que ele me indicou está atendendo todas as minhas necessidades. </p>
-                    <p>Para saber qual é o seu, acesse <a href="https://bit.ly/3awaS1U">https://bit.ly/3awaS1U</a>, informe seus dados e quais serviços você procura. </p>
+                    <img src="../assets/Post 5 - imagem 4.PNG" title="Cômodo para passar o Carnaval Foto: Katarzyna Bulas / Pixabay" style="width: 100%; height: auto;">
+                    <br><br>
+                    <p>Diárias em hotéis podem custar 5 vezes mais durante o carnaval. Por isso, a procura por estadia em aplicativos de aluguel de acomodações aumenta muito!</p>
+                    <p>Você pode disponibilizar um cômodo da sua casa (até a garagem), ou combinar de ficar na casa de amigos ou parentes enquanto aluga toda sua casa para os foliões - vocês podem dividir o valor recebido com o alguel. Para isso, você pode anunciar a estadia em aplicativos como <a href="https://www.airbnb.com.br" target="_blank">Airbnb</a>.</p>
+                    <p>Com todas essas dicas, você já pode começar agora mesmo e aproveitar essa onda de pré-carnaval para encher o bolso de dinheiro!</p>
                   </div>
                 </div>
+
                 <div class="col-lg-3"></div>
               </div>
             </div>
+            <div class="col-lg-1"></div>
           </div>
         </div>
       </div>
@@ -150,13 +149,13 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post2.jpg" class="thumb-blog" alt="thumb">
+              <img src="../assets/post1.png" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
+                  Vale a pena ter uma conta digital?
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
-                <a href="../pages/post2.html">
+                <p id="subtitulo-atalho">Educação Financeira • 18/01/2020</p>
+                <a href="../pages/vale-a-pena-conta-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -164,13 +163,13 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post3.jpg" class="thumb-blog" alt="thumb">
+              <img src="../assets/post2.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  7 Dicas para economizar no Carnaval de rua em Belo Horizonte
+                  10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 20/01/2020</p>
-                <a href="../pages/post3.html">
+                <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
+                <a href="../pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -181,13 +180,13 @@
         <div class="row linha-postagem ">
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
+              <img src="../assets/post3.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Empreendedorismo Digital
+                  7 Dicas para economizar no Carnaval de rua em Belo Horizonte
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
-                <a href="../pages/post4.html">
+                <p id="subtitulo-atalho">Educação Financeira • 20/01/2020</p>
+                <a href="../pages/bh-7-dicas-para-economizar-no-carnaval.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -195,13 +194,13 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post5.png" class="thumb-blog" alt="thumb">
+              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Pule carnaval ganhando dinheiro
+                  Como empreender no mundo digital?
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 22/01/2020</p>
-                <a href="../pages/post5.html">
+                <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
+                <a href="../pages/como-empreender-no-mundo-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -212,10 +211,10 @@
               <img src="../assets/post6.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Como ganhar dinheiro vendendo suas roupas em brechós virtuais 
+                  Entenda como ganhar dinheiro com brechós virtuais! 
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 23/01/2020</p>
-                <a href="../pages/post6.html">
+                <a href="../pages/entenda-como-ganhar-dinheiro-brecho-virtual.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -248,5 +247,14 @@
         </div>
       </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156928875-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156928875-1');
+    </script>
   </body>
 </html>
