--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
+    <meta name="description" content="Um blog que irá te ajudar a finalmente ter controle das suas finanças!">
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/index.css" />
     <link
@@ -44,7 +45,7 @@
         </span>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="pages/sobre.html">Sobre</a></li>
+          <li><a href="pages/sobre.html">Quem Somos</a></li>
           <li><a href="pages/ebook.html">E-book</a></li>
         </ul>
       </nav>
@@ -57,7 +58,7 @@
         <div class="container">
           <div class="row">
             <div id="texto-banner" class="col-lg-7 align-self-center">
-              <h1><b>Educação Financeira </br>
+              <h1 id="tit-principal"><b>Educação Financeira </br>
                   sem complicação</b>
               </h1>              
             </div>
@@ -83,7 +84,7 @@
               <h3 id="titulo-ebook-principal">Purpurina, corote & Economia</h3>
               <p id="descricao-ebook-principal">Tá afim de curtir o Carnaval mas a grana tá curta? Então você veio ao lugar certo! A gente produziu um e-book exclusivo com todas as dicas que você precisa para aproveitar muuuuito o Carnaval de BH gastando o mínimo possível!
               </p>
-              <a href="pages/ebook.html" id="baixar-ebook-principal">baixar e-book gratuito</a>
+              <a href="pages/ebook.html" id="baixar-ebook-principal">Obter e-book gratuito</a>
               <!--<button  type="button" class="btn btn-primary"></button>-->
             </div>
             <div class="col-lg-1"></div>
@@ -107,7 +108,7 @@
                   Vale a pena ter uma conta digital?
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 18/01/2020</p>
-                <a href="pages/post1.html">
+                <a href="pages/vale-a-pena-conta-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary align-self-end">LER MAIS</button>
                 </a>
               </div>             
@@ -121,7 +122,7 @@
                   10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
-                <a href="pages/post2.html">
+                <a href="pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -135,7 +136,7 @@
                   7 Dicas para economizar no Carnaval de rua em Belo Horizonte
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 20/01/2020</p>
-                <a href="pages/post3.html">
+                <a href="pages/bh-7-dicas-para-economizar-no-carnaval.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -152,7 +153,7 @@
                   Empreendedorismo Digital
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
-                <a href="pages/post4.html">
+                <a href="pages/como-empreender-no-mundo-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -163,10 +164,10 @@
               <img src="assets/post5.png" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Pule carnaval ganhando dinheiro
+                  Saiba como pular carnaval ganhando dinheiro!
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 22/01/2020</p>
-                <a href="pages/post5.html">
+                <a href="pages/saiba-como-pular-carnaval-ganhando-dinheiro.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -177,10 +178,10 @@
               <img src="assets/post6.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Como ganhar dinheiro vendendo suas roupas em brechós virtuais 
+                  Entenda como ganhar dinheiro com brechós virtuais!  
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 23/01/2020</p>
-                <a href="pages/post6.html">
+                <a href="pages/entenda-como-ganhar-dinheiro-brecho-virtual.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -214,5 +215,15 @@
         </div>
       </div>
     </footer>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156928875-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156928875-1');
+    </script>    
   </body>
 </html>
