--- a/pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html
+++ b/pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
+    <meta name="description" content="Dez ideias para economizar na hora de sair bonito pro bloquinho.">
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/post.css" />
@@ -56,16 +57,16 @@
      <!-- Corpo do site -->
      <div id="main">
       <!-- Banner do site-->
-      <div id="banner">
+      <div id="banner" class="banner-2">
         <div class="container"></div>
           <div class="row">
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8 align-self-end">
-              <h2 style="padding-left: 14px;"><b>
-                Empreendedorismo Digital</b></h2>
-              </div>
+                  <h1><b>10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!</b></h1>
+                  <h2>A grana é curta mas a vontade de sair bonitx no Carnaval de rua é grande. Aprenda com a gente.</h2>
+                </div>
             </div>
           </div>
         </div>
@@ -82,32 +83,62 @@
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8">
                   <div id="sobre-txt">
-                    <p>O Mercado digital oferece muitas possibilidades para quem está em busca de renda extra. Há influenciadores digitais fazendo vendas no Instagram e blogs, bem como produtos sendo comercializados em plataformas de e-commerce, além de trabalhos freelancer e premiações para participação em games online. Todas essas são oportunidades de negócios no marketing digital e com possibilidades de novas carreiras e um bom faturamento.</p>
-                    <p>Um dos grandes segredos da rentabilidade desse novo mercado é o processo de vendas e o sucesso do cliente. A seguir uma comparação do antigo modelo de vendas e o atual:</p>
+                    <p>O Carnaval já está batendo na porta, e com ele uma infinidade de fantasias disponíveis para que você possa comprar. Mas, que tal optar por algo bem criativo e de quebra já começar a folia economizando? Separamos 10 dicas e tutoriais de como fazer a sua própria fantasia para o Carnaval! </p>
+                    <br><hr>
+                    <h5>#Dica 1 – Fantasia com Boias</h5>
                     <br>
-                    <img src="../assets/post4_imagem1.PNG" style="width: 100%; height: auto;">
-                    <br><br>
-                    <p>Empreendedores digitais cometem alguns erros comuns que não contribui para a receita do negócio, conforme o escritor Aaaron Ross listou no livro Receita Previsível:
-                    </p>
-                    <p><b>1º Erro Fatal:</b> Não tomar para si a responsabilidade sobre a geração de vendas e leads.
-                    </p>
-                    <p><b>2º Erro Fatal:</b> Achar que os executivos de contas devem fazer prospecção de novas contas.
-                    </p>
-                    <p><b>3º Erro Fatal:</b> Supor que os canais farão a venda por você.
-                    </p>
-                    <p><b>4º Erro Fatal:</b> Atrapalhar-se na contratação, treinamento e incentivo de talentos.</p>
-                    <p><b>5º Erro Fatal:</b> Pensar em colocar o produto para fora ao invés do cliente para dentro.
-                    </p>
-                    <p><b>6º Erro Fatal:</b> Fazer a apuração e o acompanhamento das métricas de forma desleixada.
-                    </p>
-                    <p><b>7º Erro Fatal:</b> Gestão do comando e controle.
-                    </p>
-                    <p><b>Erro Fatal Extra:</b> Investir pouco no sucesso do cliente.</p>
+                    <p>Essa é uma fantasia super prática e barata que bomba nas festas de carnaval! Basta um look mais praiano e uma bóia de piscina e voilá! Veja algumas fotos que podem te inspirar!</p>
                     <br>
-                    <img src="../assets/post4.jpg" style="width: 100%; height: auto;">
-                    <br><br>
-                    <p>Por falar em sucesso do cliente, na semana passada fui atraído por uma promoção na internet de vinhos verdes. Identifiquei a oferta em um site especializado em vinhos, mas ainda não o conhecia, o que me fez pesquisar se havia reclamações. Como não havia reclamações acabei comprando. Optei por fechar uma maior quantidade, pois lembrei que alguns familiares também gostam e iriamos dividir a compra. Dica: sempre compre na internet utilizando um cartão virtual, inclusive o do meu banco é super fácil de fazer, nunca me deixou na mão e a compra fica muito confiável. Depois do pagamento fiquei feliz, por ter comprado vinhos com preços excelentes!!! No entanto, horas depois recebi um email que o
-                      pedido foi cancelado por problema no sistema de pagamento deles. Até agora não entendi o problema do erro e não recebi nenhum contato da empresa para reativar a compra. Ou seja, se quer empreender no mundo digital, cuide primeiro do seu cliente para aumentar a sua rentabilidade!</p>
+                    <div class="row">
+                      <div class="col">
+                        <img class="img-b" src="../assets/post2_imagem1.jpeg" alt="Fantasia barata feita em casa 1" style="height: auto; width: 100%;" title="Modelo 1">
+                      </div>
+                      <div class="col">
+                        <img class="img-b" src="../assets/Post2_imagem2.jpeg" alt="Fantasia barata feita em casa 2" style="height: auto; width: 100%;" title="Modelo 2">
+                      </div>
+                    </div>
+                    <br><hr>
+                    <h5>#Dica 2 – Sereia</h5>
+                    <br>
+                    <p>Nos últimos 2 anos, as fantasias de sereia vêm bombando cada vez mais no carnaval! Isso porque ela é uma opção bem bonita e prática de produzir, com diversas variações criativas! Separamos alguns vídeos com tutoriais bem legais de como fazer fantasisa de sereia!</p>
+                    <p><a href="https://youtu.be/sa8XgQ9FHq4">Top Cropped</a></p>
+                    <p><a href="https://www.youtube.com/watch?v=6P8GR_gYLCE">Maquiagem</a></p>
+                    <p><a href="https://www.youtube.com/watch?v=LOxLr9F7z-8">Saia (Cauda)</a></p>
+                    <br><hr>
+                    <h5>#Dica 3 – Saia de Fita</h5>
+                    <br>
+                    <p>Desde o último carnaval, as fitinhas coloridas vêm bombando, tanto nas tendências de decoração das festas (todo mundo adora tirar foto com as fitas, né?), quanto nas customizações das fantasias! Esse tutorial ensina a fazer uma <a href="https://www.youtube.com/watch?v=h4oGEuQQVLk">saia de fitas bem linda!</a></p>
+                    <br><hr>
+                    <h5>#Dica 4 - Saia de Tule</h5>
+                    <br>
+                    <p>A saia de tutu é uma das peças que mais encontramos no Carnaval! O legal é que, a partir dela, existe um universo de fantasias para completa-la: girassol, unicórno, sereia, bailarina, enfim... São muitas opções! Separamos dois vídeos que ensinam a fazer uma saia de tule sem costura de máquina!</p>
+                    <p><a href="https://www.youtube.com/watch?v=4KfZHPeW2wg">Vídeo 1</a></p>
+                    <p><a href="https://www.youtube.com/watch?v=x26FSa-cyP0">Vídeo 2</a></p>
+                    <br><hr>
+                    <h5>#Dica 5 – Constelação</h5>
+                    <br>
+                    <p>Imagina só fazer uma fantasia bem criativa gastando menos de 30 reais? Então confere esse <a href="https://www.youtube.com/watch?v=J1vu62QH6FY">vídeo</a> que a Bahh Ribeiro fez!</p>
+                    <br><hr>
+                    <h5>#Dica 6 – Arquinhos Criativos</h5>
+                    <br>
+                    <p>Os arquinhos dão um charme especial para as fantasias! <a href="https://www.youtube.com/watch?v=8Vp6aSIpJ28">Nesse vídeo</a>, Karen Lima ensina a fazer diversos modelos bem lindos!</p>
+                    <br><hr>
+                    <h5>#Dica 7 – Frutas</h5>
+                    <br>
+                    <p>As fantasias de frutas são muito divertidas e práticas de fazer! Existem infinitas possibilidades de customização, que dá até pra aproveitar com objetos que você provavelmente já tem em casa! Olha só esse tutorial de <a href="https://youtu.be/3A_T8kzcFbg">como fazer um arco de abacaxi!</a></p>
+                    <p>E tem também esse tutorial de como fazer uma <a href="https://youtu.be/4wH0B8uoOhY">fantasia de melancia super fofa!</a></p>
+                    <br><hr>
+                    <h5>#Dica 8 – Boneco carregando a Pessoa na Caixa</h5>
+                    <p>Uma fantasia muito criativa e divertida pra quem gosta de algo diferente e inusitado! O melhor de tudo é que dá pra fazer praticamente tudo com coisas que você provavelmente já tem em casa! Veja o tutorial <a href="https://www.youtube.com/watch?v=iM-gWBYSTjU">nesse vídeo!</a></p>
+                    <br>
+                    <br><hr>
+                    <h5>#Dica 9 – Policial</h5>
+                    <br>
+                    <p><a href="https://www.youtube.com/watch?v=_wfYo42lp_Y">Nesse vídeo</a>, Dayane Pedrosa ensina um tutorial bem simples e prático de como fazer uma das fantasias de Carnaval mais clássicas e populares!</p>
+                    <br><hr>
+                    <h5>#Dica 10 – Grego ou Grega</h5>
+                    <p>Essa é uma das opções mais simples e práticas, mas que não deixa de perder seu charme! Veja o <a href="https://www.youtube.com/watch?v=fCjllciJqno">tutorial!</a></p>
+                    <br>
                   </div>
                 </div>
                 <div class="col-lg-3"></div>
@@ -148,7 +179,7 @@
                   Vale a pena ter uma conta digital?
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 18/01/2020</p>
-                <a href="../pages/post1.html">
+                <a href="../pages/vale-a-pena-conta-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -162,7 +193,7 @@
                   10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
-                <a href="../pages/post2.html">
+                <a href="../pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -179,7 +210,7 @@
                   7 Dicas para economizar no Carnaval de rua em Belo Horizonte
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 20/01/2020</p>
-                <a href="../pages/post3.html">
+                <a href="../pages/bh-7-dicas-para-economizar-no-carnaval.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -187,13 +218,13 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post5.png" class="thumb-blog" alt="thumb">
+              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Pule carnaval ganhando dinheiro
+                  Como empreender no mundo digital?
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 22/01/2020</p>
-                <a href="../pages/post5.html">
+                <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
+                <a href="../pages/como-empreender-no-mundo-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -204,10 +235,10 @@
               <img src="../assets/post6.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Como ganhar dinheiro vendendo suas roupas em brechós virtuais 
+                  Entenda como ganhar dinheiro com brechós virtuais! 
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 23/01/2020</p>
-                <a href="../pages/post6.html">
+                <a href="../pages/entenda-como-ganhar-dinheiro-brecho-virtual.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -219,7 +250,7 @@
       </div>
       <!-- Fim da área do post -->
     </div>
-
+    
     <footer>
       <div id="rodape">
         <div id="linha-rodape" class="row align-items-center">
@@ -240,5 +271,14 @@
         </div>
       </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156928875-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156928875-1');
+    </script>
   </body>
 </html>
