--- a/pages/como-empreender-no-mundo-digital.html
+++ b/pages/como-empreender-no-mundo-digital.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
+    <meta name="description" content="Saiba como iniciar seu negócio no meio digital sem dor de cabeça.">
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/post.css" />
@@ -56,16 +57,16 @@
      <!-- Corpo do site -->
      <div id="main">
       <!-- Banner do site-->
-      <div id="banner">
+      <div id="banner" class="banner-4">
         <div class="container"></div>
           <div class="row">
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8 align-self-end">
-              <h2 style="padding-left: 14px;"><b>
-                Pule carnaval ganhando dinheiro</b></h2>
-              </div>
+                  <h1><b>Como empreender no mundo digital?</b></h1>
+                  <h2>Começar um negócio é sempre complicado. No mundo digital, mais ainda. Entenda como empreender neste meio e quais são os erros fatais.</h2>
+                </div>
             </div>
           </div>
         </div>
@@ -82,41 +83,34 @@
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8">
                   <div id="sobre-txt">
-                    <p>O carnaval é uma época do ano que movimenta muito dinheiro. Muitas pessoas viajam, saem para bares, festas e bloquinhos, investem em fantasias, maquiagens e roupas diferentes.</p>
-                    <p>O que ninguém te conta é que, além de curtir e gastar muita grana, você pode ganhar dinheiro, tanto no carnaval - que começará oficialmente dia 21 de fevereiro, quanto no pré-carnaval - que já começou! Então corre aqui que vamos te ensinar a chegar no final de fevereiro No Controle da sua vida financeira.</p>
-                    <br><hr>
-                    <h5>Faça fantasias e acessórios carnavalescos da moda</h5>
+                    <p>O Mercado digital oferece muitas possibilidades para quem está em busca de renda extra. Há <a href="https://financeone.com.br/12-perfis-no-instagram-para-melhorar-suas-financas/" target="_blank">influenciadores digitais</a> fazendo vendas no Instagram e blogs, bem como produtos sendo comercializados em plataformas de e-commerce, além de trabalhos freelancer e premiações para participação em games online. Todas essas são oportunidades de negócios no marketing digital e com possibilidades de novas carreiras e um bom faturamento.</p>
+                    <p>Um dos grandes segredos da rentabilidade desse novo mercado é o processo de vendas e o sucesso do cliente. A seguir uma comparação do antigo modelo de vendas e o atual:</p>
                     <br>
-                    <img src="../assets/Post 5 - imagem 1 (Capa).PNG" title="Foto: Pinterest" style="width: 100%; height: auto;">
+                    <img src="../assets/post4_imagem1.PNG" alt="Vendas e o Sucesso do cliente" style="width: 100%; height: auto;">
                     <br><br>
-                    <p>Você pode começar, se inspirando <a href="post2.html">nesse post</a> no nosso blog em que ensinamos a fazer fantasias e acessórios simples, criativos e baratos. Também é legal pesquisar referências de fantasias no Pinterest. Procurando por termos como “carnaval 2020”, “carnaval 2020 ideias” e “carnaval 2020 fantasias”, você encontrará muito conteúdo atual, brilhoso e colorido para suas futuras clientes arrasarem nos bloquinhos.</p>
-                    <p>Dê uma olhada boa e pense o que suas habilidades manuais te permitem fazer. Abuse de glitter, lantejoula, EVA, brocal, neon, tule que será sucesso! Se você não sabe costurar, usar cola para tecido pode te ajudar muito na hora de criar as fantasias. Os materiais para confeccionar fantasias e acessórios costumam ser baratinhos, você poderá conseguir um lucro muito bom em suas vendas.</p>
-                    <p>Para vender, faça um Instagram e poste fotos das peças. As negociações poderão ser feitas por direct mesmo. Divulgue o Instagram para suas amigas, no grupo da família e onde puder, para alcançar mais gente! </p>
-                    <br><hr>
-                    <h5>Transporte os foliões</h5>
+                    <p>Empreendedores digitais cometem alguns erros comuns que não contribui para a receita do negócio, conforme o escritor Aaaron Ross listou no livro Receita Previsível:
+                    </p>
+                    <p><b>1º Erro Fatal:</b> Não tomar para si a responsabilidade sobre a geração de vendas e leads.
+                    </p>
+                    <p><b>2º Erro Fatal:</b> Achar que os executivos de contas devem fazer prospecção de novas contas.
+                    </p>
+                    <p><b>3º Erro Fatal:</b> Supor que os canais farão a venda por você.
+                    </p>
+                    <p><b>4º Erro Fatal:</b> Atrapalhar-se na contratação, treinamento e incentivo de talentos.</p>
+                    <p><b>5º Erro Fatal:</b> Pensar em colocar o produto para fora ao invés do cliente para dentro.
+                    </p>
+                    <p><b>6º Erro Fatal:</b> Fazer a apuração e o acompanhamento das métricas de forma desleixada.
+                    </p>
+                    <p><b>7º Erro Fatal:</b> Gestão do comando e controle.
+                    </p>
+                    <p><b>Erro Fatal Extra:</b> Investir pouco no sucesso do cliente.</p>
                     <br>
-                    <img src="../assets/Post 5 - imagem 2.PNG" title="Foto: Peter Fazekas / Pexels" style="width: 100%; height: auto;">
+                    <img src="../assets/post4.jpg" alt="Iniciando meu negócio" style="width: 100%; height: auto;">
                     <br><br>
-                    <p>Você pode aproveitar que nessa época de festas, muitas pessoas deixam o carro em casa para poder beber! Cadastre-se em aplicativos como <a href="www.uber.com">Uber</a>  e <a href="https://99app.com/">99</a> e tranporte os foliões pela cidade.</p>
-                    <p>Você pode também começar um dia antes, fazendo transfer de turistas que chegarão no aeroporto ou na rodoviária.</p>
-                    <p>Quer saber onde serão os principais bloquinhos para que você não perca nenhuma corrida? Então baixe já o nosso e-book exclusivo com tudo que você precisa saber sobre o carnaval de rua de BH de 2020!</p>
-                    <br><hr>
-                    <h5>Venda lanchinhos vegetarianos, veganos, sem glúten ou sem lactose</h5>
-                    <br>
-                    <img src="../assets/Post 5 - imagem 3.PNG" title="Foto: Tania Dimas / Pixabay" style="width: 100%; height: auto;">
-                    <br><br>
-                    <p>Durante o carnaval, é comum sentir fome no meio da rua, e é nessas horas que quem tem alguma restrição alimentar sofre. Que tal apostar na falta de oferta de lanches vegetarianos, veganos, sem lactose ou sem glúten e na crescente demanda deste público, para ganhar dinheiro?</p>
-                    <br><hr>
-                    <h5>Alugue um cômodo da sua casa</h5>
-                    <br>
-                    <img src="../assets/Post 5 - imagem 4.PNG" title="Foto: Katarzyna Bulas / Pixabay" style="width: 100%; height: auto;">
-                    <br><br>
-                    <p>Diárias em hotéis podem custar 5 vezes mais durante o carnaval. Por isso, a procura por estadia em aplicativos de aluguel de acomodações aumenta muito!</p>
-                    <p>Você pode disponibilizar um cômodo da sua casa (até a garagem), ou combinar de ficar na casa de amigos ou parentes enquanto aluga toda sua casa para os foliões - vocês podem dividir o valor recebido com o alguel. Para isso, você pode anunciar a estadia em aplicativos como <a href="www.airbnb.com.br">Airbnb</a>.</p>
-                    <p>Com todas essas dicas, você já pode começar agora mesmo e aproveitar essa onda de pré-carnaval para encher o bolso de dinheiro!</p>
+                    <p>Por falar em sucesso do cliente, na semana passada fui atraído por uma promoção na internet de vinhos verdes. Identifiquei a oferta em um site especializado em vinhos, mas ainda não o conhecia, o que me fez pesquisar se havia reclamações. Como não havia reclamações acabei comprando. Optei por fechar uma maior quantidade, pois lembrei que alguns familiares também gostam e iriamos dividir a compra. Dica: sempre compre na internet utilizando um cartão virtual, inclusive o do meu banco é super fácil de fazer, nunca me deixou na mão e a compra fica muito confiável. Depois do pagamento fiquei feliz, por ter comprado vinhos com preços excelentes!!! No entanto, horas depois recebi um email que o
+                      pedido foi cancelado por problema no sistema de pagamento deles. Até agora não entendi o problema do erro e não recebi nenhum contato da empresa para reativar a compra. Ou seja, se quer empreender no mundo digital, cuide primeiro do seu cliente para aumentar a sua rentabilidade!</p>
                   </div>
                 </div>
-
                 <div class="col-lg-3"></div>
               </div>
             </div>
@@ -155,7 +149,7 @@
                   Vale a pena ter uma conta digital?
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 18/01/2020</p>
-                <a href="../pages/post1.html">
+                <a href="../pages/vale-a-pena-conta-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -169,7 +163,7 @@
                   10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
-                <a href="../pages/post2.html">
+                <a href="../pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -186,7 +180,7 @@
                   7 Dicas para economizar no Carnaval de rua em Belo Horizonte
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 20/01/2020</p>
-                <a href="../pages/post3.html">
+                <a href="../pages/bh-7-dicas-para-economizar-no-carnaval.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -197,10 +191,10 @@
               <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Empreendorismo Digital
+                  Como empreender no mundo digital?
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
-                <a href="../pages/post4.html">
+                <a href="../pages/como-empreender-no-mundo-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -211,10 +205,10 @@
               <img src="../assets/post6.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Como ganhar dinheiro vendendo suas roupas em brechós virtuais 
+                  Entenda como ganhar dinheiro com brechós virtuais! 
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 23/01/2020</p>
-                <a href="../pages/post6.html">
+                <a href="../pages/entenda-como-ganhar-dinheiro-brecho-virtual.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -226,7 +220,7 @@
       </div>
       <!-- Fim da área do post -->
     </div>
-
+    
     <footer>
       <div id="rodape">
         <div id="linha-rodape" class="row align-items-center">
@@ -247,5 +241,15 @@
         </div>
       </div>
     </footer>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156928875-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156928875-1');
+    </script>    
   </body>
 </html>
