--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -13,23 +13,82 @@
     />
     <title>No Controle</title>
     <!-- Icones Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="../favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
-    <link rel="manifest" href="../favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="../favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="../favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="../favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="../favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="../favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="../favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="../favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="../favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="../favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="../favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="../favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="../favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body style="background: #1B48D1;">
     <!-- Cabeçalho -->
@@ -73,31 +132,43 @@
                     action="https://smtl.gama.academy/leads/f5d1eb00-39f4-11ea-96ea-713ae26a8736"
                     onSubmit="javascript:download_pdf()"
                   >
-                  <div id="form-box">
-                    <span>E-BOOK</span>
-                    <h3>Purpurina, Corote & Economia!</h3>
-                    <span>Tá afim de curtir o Carnaval mas a grana tá curta? Então você veio ao lugar certo! A gente produziu um e-book exclusivo com todas as dicas que você precisa para aproveitar muuuuito o Carnaval de BH gastando o mínimo possível! Preencha com seus dados e baixe agora! Aproveite e compartilhe com os amigos!</span>
-                    <input
-                      name="name"
-                      type="text"
-                      pattern="^\D{2,}\s[\D\s]{2,}$"
-                      title="Nome Completo"
-                      placeholder="Nome Completo"
-                      required
-                    />
-                    <input
-                      name="email"
-                      type="email"
-                      title="E-mail"
-                      placeholder="E-mail"
-                      required
-                    />
-                    <input name="redirectTo" type="hidden" value="http://nocontrole.blog.br/pages/thanks.html" />
-                    <!--<input name="debugMode" type="hidden" value="true" />-->
-                    <div id="sub">
-                      <input type="submit" value="BAIXAR O MATERIAL"/>
+                    <div id="form-box">
+                      <span>E-BOOK</span>
+                      <h3>Purpurina, Corote & Economia!</h3>
+                      <span
+                        >Tá afim de curtir o Carnaval mas a grana tá curta?
+                        Então você veio ao lugar certo! A gente produziu um
+                        e-book exclusivo com todas as dicas que você precisa
+                        para aproveitar muuuuito o Carnaval de BH gastando o
+                        mínimo possível! Preencha com seus dados e baixe agora!
+                        Aproveite e compartilhe com os amigos! <br /><br />
+                        * o e-book será aberto em nova aba no navegador</span
+                      >
+                      <input
+                        name="name"
+                        type="text"
+                        pattern="^\D{2,}\s[\D\s]{2,}$"
+                        title="Nome Completo"
+                        placeholder="Nome Completo"
+                        required
+                      />
+                      <input
+                        name="email"
+                        type="email"
+                        title="E-mail"
+                        placeholder="E-mail"
+                        required
+                      />
+                      <input
+                        name="redirectTo"
+                        type="hidden"
+                        value="http://nocontrole.blog.br/pages/thanks.html"
+                      />
+                      <!--<input name="debugMode" type="hidden" value="true" />-->
+                      <div id="sub">
+                        <input type="submit" value="BAIXAR O MATERIAL" />
+                      </div>
                     </div>
-                  </div>
                   </form>
                 </div>
               </div>
@@ -117,9 +188,9 @@
               src="../assets/logo-branco.png"
               id="logo-cabecalho"
               alt="logotipo"
-            />             
+            />
           </div>
-          <div class="col-lg-7 align-self-center"> 
+          <div class="col-lg-7 align-self-center">
             <p id="direitos">
               <b>NoControle.blog.</b> Todos os direitos reservados.
             </p>
@@ -129,6 +200,12 @@
       </div>
     </footer>
     <script src="../js/main.js" type="text/javascript"></script>
-    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7040079.js"></script>
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js.hs-scripts.com/7040079.js"
+    ></script>
   </body>
 </html>
