--- a/pages/vale-a-pena-conta-digital.html
+++ b/pages/vale-a-pena-conta-digital.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
+    <meta name="description" content="Entenda as vantagens de se migrar de bancos tradicionais para os novos bancos 100% digitais.">
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/post.css" />
@@ -56,16 +57,16 @@
      <!-- Corpo do site -->
      <div id="main">
       <!-- Banner do site-->
-      <div id="banner">
+      <div id="banner" class="banner-1">
         <div class="container"></div>
           <div class="row">
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8 align-self-end">
-              <h2 style="padding-left: 14px;"><b>
-                10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!</b></h2>
-              </div>
+                  <h1><b>Vale a pena ter uma conta digital?</b></h1>
+                  <h2>Migrar de um banco tradicional para um digital pode ser complicado. Entenda quais as vantagens dessa mudança cada vez mais comum.</h2>
+                </div>
             </div>
           </div>
         </div>
@@ -76,74 +77,52 @@
       <div id="corpo-post">
         <div id="container">
           <div id="row">
-            <div class="col-lg-1"></div>
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8">
-                  <p id="sobre-txt">
-                    <p>O Carnaval já está batendo na porta, e com ele uma infinidade de fantasias disponíveis para que você possa comprar. Mas, que tal optar por algo bem criativo e de quebra já começar a folia economizando? Separamos 10 dicas e tutoriais de como fazer a sua própria fantasia para o Carnaval! </p>
+                  <div id="sobre-txt">
+                    <p>Se você veio parar aqui, muito provavelmente está pensando em encerrar sua conta em um banco tradicional e abrir uma conta em um banco digital, ou então acabou de migrar para um banco digital, mas ainda não sabe se fez a coisa certa. Acertei?</p>
+                    <img src="../assets/post1.png" title="Acessando a conta digital. Foto: Bruce Mars / Pexels" style="width: 100%; height: auto;">
+                    <br><br><hr>
+                    <h5>Mas afinal, o que é uma conta digital?</h5>
+                    <br>
+                    <p>Uma conta digital é muito parecida com uma conta tradicional. Só que tudo que acontece dentro de uma agência bancária, foi parar em um aplicativo de celular. Você acompanha sua fatura, faz transferências, paga e gera boletos pelo celular ou pelo computador, sem precisar sair de casa ou enfrentar filas. Até o atendimento é feito eletronicamente!</p>
                     <br><hr>
-                    <h5>#Dica 1 – Fantasia com Boias</h5>
+                    <h5>Pontos negativos (mas nem tanto) de ter uma conta digital:</h5>
                     <br>
-                    <p>Essa é uma fantasia super prática e barata que bomba nas festas de carnaval! Basta um look mais praiano e uma bóia de piscina e voilá! Veja algumas fotos que podem te inspirar!</p>
-                    <br>
-                    <div class="row">
-                      <div class="col">
-                        <img class="img-b" src="../assets/post2_imagem1.jpeg" style="height: auto; width: 100%;" title="Modelo 1">
-                      </div>
-                      <div class="col">
-                        <img class="img-b" src="../assets/post2_imagem2.jpeg" style="height: auto; width: 100%;" title="Modelo 2">
-                      </div>
-                    </div>
+                    <p>Os bancos digitais não tem agência. Eu considero isto um ponto positivo, mas algumas pessoas sentem falta do contato direto com o seu gerente.Em caso de dúvida ou problema você deve entrar em contato com seu banco digital pelo chat no app ou no site, ou por telefone - e dependendo do problema, estas conversas poderão ser muito longas.</p>
+                    <p>Você também dependerá da disponibilidade de caixas 24h em sua cidade ou precisará ir em casas lotéricas em horário comercial se quiser sacar seu dinheiro. As taxas de saque também costumam ser altas.</p>
                     <br><hr>
-                    <h5>#Dica 2 – Sereia</h5>
+                    <h5>Então, o que tem de bom nesse tal de banco digital?</h5>
                     <br>
-                    <p>Nos últimos 2 anos, as fantasias de sereia vêm bombando cada vez mais no carnaval! Isso porque ela é uma opção bem bonita e prática de produzir, com diversas variações criativas! Separamos alguns vídeos com tutoriais bem legais de como fazer fantasisa de sereia!</p>
-                    <p><a href="https://youtu.be/sa8XgQ9FHq4">Top Cropped</a></p>
-                    <p><a href="https://www.youtube.com/watch?v=6P8GR_gYLCE">Maquiagem</a></p>
-                    <p><a href="https://www.youtube.com/watch?v=LOxLr9F7z-8">Saia (Cauda)</a></p>
+                    <p>Os bancos digitais não têm que gastar com a manutenção de uma rede de agências, segurança, aluguel, dentre outras coisas. Com isso, eles conseguem repassar essa economia para seus clientes, trabalhando com tarifas baixíssimas ou sem tarifas.</p>
+                    <p>Lembra quando você abriu sua primeira conta no banco? O tempo que teve que aguardar na fila, aquela papelada que precisou ler e assinar, fora as vezes que precisou voltar na agência? Você não perde mais esse tempo ao abrir uma conta digital! Tudo é feito pelo aplicativo no celular, por lá você envia fotos dos seus documentos, uma foto sua para comprovar que é você e aceita os termos do banco por ali mesmo, sem pegar trânsito nem nada. Só precisa se preocupar em sair bonito na selfie!</p>
+                    <p>Pagar um boleto, transferir dinheiro para o seu filho que está viajando, checar a fatura do cartão, fazer um depósito e até pegar um empréstimo. Você consegue fazer tudo isso sem sair do sofá. E se não for horário comercial ou dia útil, você pode agendar uma transferência para o próximo dia útil.</p>
+                    <p>Muitos bancos digitais têm seus programas de pontos e de cashback, fazendo seu dinheiro crescer ainda mais. Você também consegue ajustar o limite do cartão pelo aplicativo. Além disso, com a fatura na palma da mão você consegue organizar muito melhor os seus gastos.</p>
+                    <p>É legal lembrar que transferindo dinheiro de uma conta de um banco digital para outra do mesmo banco, você não paga nenhuma taxa e o dinheiro cai na mesma hora, mesmo não sendo dia útil, nem horário comercial.</p>
                     <br><hr>
-                    <h5>#Dica 3 – Saia de Fita</h5>
+                    <h5>Mas é seguro?</h5>
                     <br>
-                    <p>Desde o último carnaval, as fitinhas coloridas vêm bombando, tanto nas tendências de decoração das festas (todo mundo adora tirar foto com as fitas, né?), quanto nas customizações das fantasias! Esse tutorial ensina a fazer uma <a href="https://www.youtube.com/watch?v=h4oGEuQQVLk">saia de fitas bem linda!</a></p>
+                    <p>O Conselho Monetário Nacional obriga, na resolução 4658 estas instituições financeiras a terem uma política de segurança cibernética, definindo requisitos para a contratação de serviços de processamento e armazenamento de dados e de computação em nuvem.</p>
+                    <p>Além disso, a segurança de uma conta digital é basicamente a mesma das contas tradicionais. Ambas seguem a regulamentação do Banco central. Para se proteger de ataques cibernéticos, as empresas estão investindo em sistemas cada vez mais seguros.</p>
+                    <p>Então, pode ficar tranquilo, mas lembre-se sempre de proteger seus dados bancários, como faria com os dados da sua conta convencional.</p>
                     <br><hr>
-                    <h5>#Dica 4 - Saia de Tule</h5>
+                    <h5>Acho que isso é tecnológico demais pra mim…</h5>
                     <br>
-                    <p>A saia de tutu é uma das peças que mais encontramos no Carnaval! O legal é que, a partir dela, existe um universo de fantasias para completa-la: girassol, unicórno, sereia, bailarina, enfim... São muitas opções! Separamos dois vídeos que ensinam a fazer uma saia de tule sem costura de máquina!</p>
-                    <p><a href="https://www.youtube.com/watch?v=4KfZHPeW2wg">Vídeo 1</a></p>
-                    <p><a href="https://www.youtube.com/watch?v=x26FSa-cyP0">Vídeo 2</a></p>
+                    <p>Se você não está acostumado a lidar com aplicativos, realmente pode ter um pouco de dificuldade em seus primeiros contatos com um banco digital. Mas não é nenhum bicho de sete cabeças! Os bancos digitais focam muito em experiência do cliente e em usabilidade, suas interfaces são muito intuitivas.</p>
+                    <p>Mas se mesmo assim achou difícil, peça alguém para te ajudar nesse começo, na hora de abrir a conta e te mostrar um pouco das funcionalidades. Garanto que rapidinho você estará contando para todo mundo que não entendo como ainda não tinha tomado a decisão de abrir uma conta digital antes!</p>
                     <br><hr>
-                    <h5>#Dica 5 – Constelação</h5>
+                    <h5>Como saber qual é a melhor conta digital para mim?</h5>
                     <br>
-                    <p>Imagina só fazer uma fantasia bem criativa gastando menos de 30 reais? Então confere esse <a href="https://www.youtube.com/watch?v=J1vu62QH6FY">vídeo</a> que a Bahh Ribeiro fez!</p>
-                    <br><hr>
-                    <h5>#Dica 6 – Arquinhos Criativos</h5>
-                    <br>
-                    <p>Os arquinhos dão um charme especial para as fantasias! <a href="https://www.youtube.com/watch?v=8Vp6aSIpJ28">Nesse vídeo</a>, Karen Lima ensina a fazer diversos modelos bem lindos!</p>
-                    <br><hr>
-                    <h5>#Dica 7 – Frutas</h5>
-                    <br>
-                    <p>As fantasias de frutas são muito divertidas e práticas de fazer! Existem infinitas possibilidades de customização, que dá até pra aproveitar com objetos que você provavelmente já tem em casa! Olha só esse tutorial de <a href="https://youtu.be/3A_T8kzcFbg">como fazer um arco de abacaxi!</a></p>
-                    <p>E tem também esse tutorial de como fazer uma <a href="https://youtu.be/4wH0B8uoOhY">fantasia de melancia super fofa!</a></p>
-                    <br><hr>
-                    <h5>#Dica 8 – Boneco carregando a Pessoa na Caixa</h5>
-                    <p>Uma fantasia muito criativa e divertida pra quem gosta de algo diferente e inusitado! O melhor de tudo é que dá pra fazer praticamente tudo com coisas que você provavelmente já tem em casa! Veja o tutorial <a href="https://www.youtube.com/watch?v=iM-gWBYSTjU">nesse vídeo!</a></p>
-                    <br>
-                    <br><hr>
-                    <h5>#Dica 9 – Policial</h5>
-                    <br>
-                    <p><a href="https://www.youtube.com/watch?v=_wfYo42lp_Y">Nesse vídeo</a>, Dayane Pedrosa ensina um tutorial bem simples e prático de como fazer uma das fantasias de Carnaval mais clássicas e populares!</p>
-                    <br><hr>
-                    <h5>#Dica 10 – Grego ou Grega</h5>
-                    <p>Essa é uma das opções mais simples e práticas, mas que não deixa de perder seu charme! Veja o <a href="https://www.youtube.com/watch?v=fCjllciJqno">tutorial!</a></p>
-                    <br>
+                    <p>Cada banco digital tem suas particularidades, e você deve entender qual é o mais adequado para o seu perfil.</p>
+                    <p>Para decidir o meu, usei o Simulador de Contas Digitais e deu super certo. O banco digital que ele me indicou está atendendo todas as minhas necessidades. </p>
+                    <p>Para saber qual é o seu, acesse <a href="https://bit.ly/3awaS1U" target="_blank">esse link</a>, informe seus dados e quais serviços você procura. </p>
                   </div>
                 </div>
                 <div class="col-lg-3"></div>
               </div>
             </div>
-            <div class="col-lg-1"></div>
           </div>
         </div>
       </div>
@@ -177,8 +156,8 @@
                 <h5 class="titulo-atalho-blog">
                   Vale a pena ter uma conta digital?
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
-                <a href="../pages/post1.html">
+                <p id="subtitulo-atalho">Educação Financeira • 18/01/2020</p>
+                <a href="../pages/vale-a-pena-conta-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -186,13 +165,13 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post3.jpg" class="thumb-blog" alt="thumb">
+              <img src="../assets/post2.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  7 Dicas para economizar no Carnaval de rua em Belo Horizonte
+                  10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
-                <a href="../pages/post3.html">
+                <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
+                <a href="../pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -203,13 +182,13 @@
         <div class="row linha-postagem ">
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
+              <img src="../assets/post3.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Empreendedorismo Digital
+                  7 Dicas para economizar no Carnaval de rua em Belo Horizonte
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
-                <a href="../pages/post4.html">
+                <p id="subtitulo-atalho">Educação Financeira • 20/01/2020</p>
+                <a href="../pages/bh-7-dicas-para-economizar-no-carnaval.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -217,13 +196,13 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post5.png" class="thumb-blog" alt="thumb">
+              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Pule carnaval ganhando dinheiro
+                  Como empreender no mundo digital?
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
-                <a href="../pages/post5.html">
+                <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
+                <a href="../pages/como-empreender-no-mundo-digital.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -234,10 +213,10 @@
               <img src="../assets/post6.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Como ganhar dinheiro vendendo suas roupas em brechós virtuais 
+                  Entenda como ganhar dinheiro com brechós virtuais! 
                 </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
-                <a href="../pages/post6.html">
+                <p id="subtitulo-atalho">Educação Financeira • 23/01/2020</p>
+                <a href="../pages/entenda-como-ganhar-dinheiro-brecho-virtual.html">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
@@ -270,5 +249,14 @@
         </div>
       </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156928875-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-156928875-1');
+    </script>
   </body>
 </html>
