--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -66,6 +66,7 @@
               <h2 style="padding-left: 14px;"><b>
                 Quem Somos</b></h2>
               </div>
+              <div class="col-lg-3"></div>
             </div>
           </div>
         </div>
